# QOPS

./: .gitignore  README.md  pyproject.toml  report.json  testcircuit.qasm  testcps.json
QOPS/: QiskitExecutor.py  Test_CUT_CPS.py  Tester.py  VLQExecutor.py  __main__.py  abstract_classes.py  requirements.txt
QOPS.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
