[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "QOPS"
version = "0.1.0"
description = "Quantum Program Testing Throught Commuting Pauli Strings"
authors = [
    { name = "Asmar", email = "asmar@simula.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "qiskit>=1.0",
    "qiskit_aer_gpu_cu11>=0.15.0",
    "qiskit_ibm_runtime>=0.40",
    "mthree",
    "qiskit-qasm3-import>=0.6"
]

[tool.setuptools.packages.find]
# Automatically find packages inside the source tree
where = ["."]
